# ros2-practice

mengshi/topic_pub/: CMakeLists.txt  package.xml
mengshi/topic_pub/src/: pub_vel.cpp
mengshi/topic_pub_py/: package.xml  setup.cfg  setup.py
mengshi/topic_pub_py/topic_pub_py/: pub_vel.py
mengshi/topic_sub/: CMakeLists.txt  package.xml
mengshi/topic_sub/src/: sub_odom.cpp
mengshi/topic_sub_py/: package.xml  setup.cfg  setup.py
mengshi/topic_sub_py/topic_sub_py/: __init__.py  sub_odom.py
yuxiang/village_interfaces/: CMakeLists.txt  package.xml
yuxiang/village_interfaces/msg/: Novel.msg
yuxiang/village_interfaces/srv/: BorrowMoney.srv
yuxiang/village_li/: package.xml  setup.py
yuxiang/village_li/launch/: village.launch.py
yuxiang/village_li/village_li/: li3.py  li4.py  li4_pop.py
yuxiang/village_wang/: CMakeLists.txt  package.xml
yuxiang/village_wang/launch/: village.launch.py
yuxiang/village_wang/src/: wang2.cpp  wang2_pop.cpp
yuxiang/village_zhang/: CMakeLists.txt  package.xml
yuxiang/village_zhang/src/: zhang3.cpp
